base/bootstrap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:236731556556:certificate/85b8c721-7632-45cc-b8d9-c8fabf74fd86
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: po1
    alb.ingress.kubernetes.io/group.order: '1'
    alb.ingress.kubernetes.io/conditions.argocd-grpc: '[{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "Content-Type", "values":["application/grpc"]}}]'
    alb.ingress.kubernetes.io/target-type: ip
  name: argocd
  namespace: argocd
spec:
  ingressClassName: alb
  rules:
  - host: po1-argocd.dev.travcorpservices.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-grpc
            port:
              number: 443
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
  tls:
  - hosts:
    - po1-argocd.dev.travcorpservices.com
